external-crates/move/crates/move-compiler/tests/development/enums/matching/invalid_literal.exp
error[E04036]: non-exhaustive pattern
  ┌─ tests/development/enums/matching/invalid_literal.move:8:16
  │
8 │         match (opt) {
  │                ^^^ Pattern 'Option::Some(_)' not covered

error[E01006]: invalid number literal
  ┌─ tests/development/enums/matching/invalid_literal.move:9:26
  │
9 │             Option::Some(256u8) => (),
  │                          ^^^^^ Invalid number literal. The given literal is too large to fit into 'u8'

